--- a/bermundo.html
+++ b/bermundo.html
@@ -6,5 +6,6 @@
 <body>
 	<h1>I am Mary Joy Bermundo, 22 years old from San Fernando, Pampanga.</h1>
 	<h2>I love bangtan and I love watching kdrama.</h2>
+	<h3>Thank you.</h3>
 </body>
 </html>
