--- a/delpilar.html
+++ b/delpilar.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>I am Junelle Marie A. Del Pilar, 22 years old from San Pedro Guagua Pampanga.</h1>
 	<h2>I love EXO </h2>
+
+	<h3> Have a nice day!</h3>
 </body>
 </html>
